2004-10-25  Dalibor Topic  <robilad@kaffe.org>

	* libraries/javalib/gnu/java/text/BaseBreakIterator.java,
	libraries/javalib/gnu/java/text/CharacterBreakIterator.java,
	libraries/javalib/gnu/java/text/LineBreakIterator.java,
	libraries/javalib/gnu/java/text/SentenceBreakIterator.java,
	libraries/javalib/gnu/java/text/WordBreakIterator.java,
	libraries/javalib/java/text/BreakIterator.java:
        Resynced with GNU Classpath.

	2004-10-25  Tom Tromey  <tromey@redhat.com>

        * gnu/java/text/WordBreakIterator.java (WordBreakIterator): Don't
        initialize `iter'.
        * gnu/java/text/SentenceBreakIterator.java
        (SentenceBreakIterator): Don't initialize `iter'.
        * gnu/java/text/LineBreakIterator.java (LineBreakIterator): Don't
        initialize `iter'.
        * gnu/java/text/CharacterBreakIterator.java
        (CharacterBreakIterator): Don't initialize `iter'.
        * gnu/java/text/BaseBreakIterator.java (BaseBreakIterator): New
        constructor.
        * java/text/BreakIterator.java: Updated documentation.

2004-10-25  Dalibor Topic  <robilad@kaffe.org>

	* libraries/javalib/javax/swing/JMenuBar.java,
	libraries/javalib/javax/swing/tree/DefaultTreeSelectionModel.java:
        Resynced with GNU Classpath.

	2004-10-25  Michael Koch  <konqueror@gmx.de>

        * javax/swing/JMenuBar.java
        (updateUI): Simplified.
        * javax/swing/tree/DefaultTreeSelectionModel.java:
        Reorganized import statements.

2004-10-25  Dalibor Topic  <robilad@kaffe.org>

	* libraries/javalib/java/net/InetAddress.java:
        Resynced with GNU Classpath.

	2004-10-25  Michael Koch  <konqueror@gmx.de>

        * java/net/InetAddress.java
        (toString): Rename 'address' to 'addr'.

2004-10-25  Dalibor Topic  <robilad@kaffe.org>

	* libraries/javalib/java/awt/font/TextAttribute.java,
	libraries/javalib/javax/security/auth/spi/package.html,
	libraries/javalib/javax/swing/JComponent.java,
	libraries/javalib/javax/swing/JInternalFrame.java,