@@ -1,3 +1,13 @@
+2004-10-26  Dalibor Topic  <robilad@kaffe.org>
+
+	* libraries/javalib/gnu/java/net/protocol/http/Connection.java:
+        Resynced with GNU Classpath.
+
+	2004-10-26  Michael Koch  <konqueror@gmx.de>
+
+        * gnu/java/net/protocol/http/Connection.java
+        (getOutputStream): Implicitely switch to POST method.
+
 2004-10-25  Dalibor Topic  <robilad@kaffe.org>
 
 	* libraries/javalib/gnu/java/text/BaseBreakIterator.java,
